--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "server-dev": "nodemon server/index.js",
-    "react-dev": "webpack --watch"
+    "react-dev": "webpack --watch",
+    "db:setup": "node database/seed.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -31,7 +32,10 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest": "^26.6.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
