--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "",
+  "jest": {
+    "verbose": true
+  },
   "version": "",
   "description": "",
   "author": "",
@@ -10,7 +13,8 @@
   "scripts": {
     "server-dev": "nodemon server/index.js",
     "react-dev": "webpack --watch",
-    "db:setup": "node database/seed.js"
+    "db:setup": "node database/seed.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -23,19 +27,22 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "router": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-syntax-jsx": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
