--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "mongodb": "^3.6.3",
     "mongodb-dataset-generator": "^1.0.0",
     "mongoose": "^5.10.13",
