--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "server-dev": "nodemon server/index.js",
     "react-dev": "webpack --watch",
     "db:setup": "node database/seed.js",
-    "test": "jest"
+    "test": "jest --coverage --verbose"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -30,11 +30,13 @@
     "path": "^0.12.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-star-ratings": "^2.3.0",
     "router": "^1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-syntax-jsx": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "babel-jest": "^26.6.3",
@@ -44,6 +46,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^26.6.3",
     "react-test-renderer": "^16.14.0",
+    "supertest": "^6.0.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
